--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <head>
     <title>JM Refrigeration Form</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0/css/select2.min.css"> -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 </head>
+<!-- Logo -->
+<div class="logo">
+    <a href="https://rafiqfarmfoods.com/" target="_blank">
+        <img id="logoImg" src="/images/rff.png">
+    </a>
+</div>
+
+<!-- Form -->
 
 <body>
     <h1>JM Refrigeration Form</h1>
+    <div id="line"></div>
     <form id="JMRefrigerationForm">
         <div class="sections">
             <h2>Ammonia compressor -40</h1>
@@ -174,8 +181,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>Copyright &copy; <a href="https://rafiqfarmfoods.com/" target="_blank"> Rafiq Farm Foods </a>| All Right
-            Reserved. </p>
+        <p><a href="https://rafiqfarmfoods.com/" target="_blank">Copyright &copy; Rafiq Farm Foods | All Right
+                Reserved. </a></p>
     </footer>
     <!-- end of Footer -->
 
