--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             <h2>Ammonia compressor -40</h1>
                 <label for="RSD">Total running hours /day:</label>
                 <div class="RSD">
-                    <input type="time" id="totalrunninghrs" name="AmmoniaCompressor-40 Total running hours/day"
-                        required>
+
+                    <input type="text" class="input" id="availability-duration"
+                        name="AmmoniaCompressor-40 Total running hours/day" placeholder="HH:MM"
+                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" required>
+
                     <!-- <label for="RSD">Remarks:</label> -->
                     <input type="text" id="remarks" name="AmmoniaCompressor-40 Remarks" required placeholder="Remarks">
                 </div>
@@ -34,8 +37,10 @@
                     <h2>Ammonia compressor -30</h1>
                         <label for="RSD">Total running hours /day:</label>
                         <div class="RSD">
-                            <input type="time" id="totalrunninghrs30"
-                                name="AmmoniaCompressor-30 Total running hours/day" required>
+
+                            <input type="text" class="input" id="availability-duration"
+                                name="AmmoniaCompressor-30 Total running hours/day" placeholder="HH:MM"
+                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" required>
                             <!-- <label for="RSD">Remarks:</label> -->
                             <input type="text" id="remarks30" name="AmmoniaCompressor-30 Remarks" required
                                 placeholder="Remarks">
@@ -44,8 +49,10 @@
                             <h2>Ammonia compressor -10</h1>
                                 <label for="RSD">Total running hours /day:</label>
                                 <div class="RSD">
-                                    <input type="time" id="totalrunninghrs10"
-                                        name="AmmoniaCompressor-10 Total running hours/day" required>
+
+                                    <input type="text" class="input" id="availability-duration"
+                                        name="AmmoniaCompressor-10 Total running hours/day" placeholder="HH:MM"
+                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" required>
                                     <!-- <label for="RSD">Remarks:</label> -->
                                     <input type="text" id="remarks10" name="AmmoniaCompressor-10 Remarks" required
                                         placeholder="Remarks">
@@ -54,8 +61,10 @@
                                     <h2>Ammonia Condenser No1</h1>
                                         <label for="RSD">Total running hours /day:</label>
                                         <div class="RSD">
-                                            <input type="time" id="totalrunninghrsAC1"
-                                                name="AmmoniaCondenserNo1 Total running hours/day" required>
+
+                                            <input type="text" id="availability-duration"
+                                                name="AmmoniaCondenserNo1 Total running hours/day" placeholder="HH:MM"
+                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" required>
                                             <!-- <label for="RSD">Remarks:</label> -->
                                             <input type="text" id="remarksAC1" name="AmmoniaCondenserNo1 Remarks"
                                                 required placeholder="Remarks">
@@ -64,8 +73,11 @@
                                             <h2>Ammonia Condenser No2</h1>
                                                 <label for="RSD">Total running hours /day:</label>
                                                 <div class="RSD">
-                                                    <input type="time" id="totalrunninghrsAC2"
-                                                        name="AmmoniaCondenserNo2 Total running hours/day" required>
+
+                                                    <input type="text" id="availability-duration"
+                                                        name="AmmoniaCondenserNo2 Total running hours/day"
+                                                        placeholder="HH:MM" pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
+                                                        required>
                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                     <input type="text" id="remarksAC2"
                                                         name="AmmoniaCondenserNo2 Remarks" required
@@ -75,9 +87,11 @@
                                                     <h2>Day Storage Evaporator Hall Fan</h1>
                                                         <label for="RSD">Total running hours /day:</label>
                                                         <div class="RSD">
-                                                            <input type="time" id="totalrunninghrsDSEHF"
+
+                                                            <input type="text" id="availability-duration"
                                                                 name="DayStorageEvaporatorHallFan Total running hours/day"
-                                                                required>
+                                                                placeholder="HH:MM"
+                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" required>
                                                             <!-- <label for="RSD">Remarks:</label> -->
                                                             <input type="text" id="remarksDSEHF"
                                                                 name="DayStorageEvaporatorHallFan Remarks" required
@@ -87,8 +101,11 @@
                                                             <h2>Cold Storage Evaporator No.1 Fan</h1>
                                                                 <label for="RSD">Total running hours /day:</label>
                                                                 <div class="RSD">
-                                                                    <input type="time" id="totalrunninghrsfan1"
+
+                                                                    <input type="text" id="availability-duration"
                                                                         name="ColdStorageEvaporatorNo1Fan Total running hours/day"
+                                                                        placeholder="HH:MM"
+                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                         required>
                                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                                     <input type="text" id="remarksfan1"
@@ -100,8 +117,12 @@
                                                                         <label for="RSD">Total running hours
                                                                             /day:</label>
                                                                         <div class="RSD">
-                                                                            <input type="time" id="totalrunninghrsfan2"
+
+                                                                            <input type="text"
+                                                                                id="availability-duration"
                                                                                 name="ColdStorageEvaporatorNo2Fan Total running hours/day"
+                                                                                placeholder="HH:MM"
+                                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                 required>
                                                                             <!-- <label for="RSD">Remarks:</label> -->
                                                                             <input type="text" id="remarksfan2"
@@ -113,9 +134,12 @@
                                                                                 <label for="RSD">Total running hours
                                                                                     /day:</label>
                                                                                 <div class="RSD">
-                                                                                    <input type="time"
-                                                                                        id="totalrunninghrsfan3"
+
+                                                                                    <input type="text"
+                                                                                        id="availability-duration"
                                                                                         name="ColdStorageEvaporatorNo3Fan Total running hours/day"
+                                                                                        placeholder="HH:MM"
+                                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                         required>
                                                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                                                     <input type="text" id="remarksfan3"
@@ -128,9 +152,12 @@
                                                                                         <label for="RSD">Total running
                                                                                             hours /day:</label>
                                                                                         <div class="RSD">
-                                                                                            <input type="time"
-                                                                                                id="totalrunninghrsCSCE"
+
+                                                                                            <input type="text"
+                                                                                                id="availability-duration"
                                                                                                 name="ColdstorageCorridorEvaporatorFan Total running hours/day"
+                                                                                                placeholder="HH:MM"
+                                                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                 required>
                                                                                             <!-- <label for="RSD">Remarks:</label> -->
                                                                                             <input type="text"
@@ -145,9 +172,12 @@
                                                                                                     running
                                                                                                     hours /day:</label>
                                                                                                 <div class="RSD">
-                                                                                                    <input type="time"
-                                                                                                        id="totalrunninghrsairC"
+
+                                                                                                    <input type="text"
+                                                                                                        id="availability-duration"
                                                                                                         name="AirCompressor Total running hours/day"
+                                                                                                        placeholder="HH:MM"
+                                                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                         required>
                                                                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                                                                     <input type="text"
@@ -279,12 +309,10 @@
             document.getElementById('totalrunninghrsCSCE').value = '';
             document.getElementById('remarksCSCE').value = '';
             document.getElementById('totalrunninghrsairC').value = '';
-
-
-
         });
 
     </script>
+    <!-- end of for reseting after submitting -->
 
     <script>
         // Function to show the spinner
@@ -313,11 +341,25 @@
 
         form.addEventListener("submit", handleSubmit);
     </script>
-
-    <!-- end of for reseting after submitting -->
-
-
     <!-- end of spinner -->
+
+
+
+    <!-- check time validations -->
+    <script>
+        // Get the input element
+        var durationInput = document.getElementById('availability-duration');
+        durationInput.addEventListener('change', function () {
+            durationInput.setCustomValidity('');
+            var value = durationInput.value;
+            var hours = parseInt(value.split(':')[0]);
+            var minutes = parseInt(value.split(':')[1]);
+            if (isNaN(hours) || isNaN(minutes) || minutes >= 60) {
+                durationInput.setCustomValidity('Please enter a valid duration in HH:MM format with hours under 23 and minutes under 60.');
+            }
+        });
+    </script>
+    <!-- End of check time validations -->
 </body>
 
 </html>
