--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="RSD">
 
                     <input type="text" id="availability-duration" name="AmmoniaCompressor-40 Total running hours/day"
-                        placeholder="HH:MM" pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" class="time-input" required>
+                        placeholder="HH:MM" class="time-input" required>
 
                     <!-- <label for="RSD">Remarks:</label> -->
                     <input type="text" id="remarks" name="AmmoniaCompressor-40 Remarks" required placeholder="Remarks">
@@ -42,7 +42,7 @@
 
                             <input type="text" id="availability-duration"
                                 name="AmmoniaCompressor-30 Total running hours/day" placeholder="HH:MM"
-                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" class="time-input" required>
+                                 class="time-input" required>
                             <!-- <label for="RSD">Remarks:</label> -->
                             <input type="text" id="remarks30" name="AmmoniaCompressor-30 Remarks" required
                                 placeholder="Remarks">
@@ -54,7 +54,7 @@
 
                                     <input type="text" id="availability-duration"
                                         name="AmmoniaCompressor-10 Total running hours/day" placeholder="HH:MM"
-                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" class="time-input" required>
+                                         class="time-input" required>
                                     <!-- <label for="RSD">Remarks:</label> -->
                                     <input type="text" id="remarks10" name="AmmoniaCompressor-10 Remarks" required
                                         placeholder="Remarks">
@@ -66,7 +66,7 @@
 
                                             <input type="text" id="availability-duration"
                                                 name="AmmoniaCondenserNo1 Total running hours/day" placeholder="HH:MM"
-                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$" class="time-input" required>
+                                                 class="time-input" required>
                                             <!-- <label for="RSD">Remarks:</label> -->
                                             <input type="text" id="remarksAC1" name="AmmoniaCondenserNo1 Remarks"
                                                 required placeholder="Remarks">
@@ -78,7 +78,7 @@
 
                                                     <input type="text" id="availability-duration"
                                                         name="AmmoniaCondenserNo2 Total running hours/day"
-                                                        placeholder="HH:MM" pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
+                                                        placeholder="HH:MM" 
                                                         class="time-input" required>
                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                     <input type="text" id="remarksAC2"
@@ -93,7 +93,6 @@
                                                             <input type="text" id="availability-duration"
                                                                 name="DayStorageEvaporatorHallFan Total running hours/day"
                                                                 placeholder="HH:MM"
-                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                 class="time-input" required>
                                                             <!-- <label for="RSD">Remarks:</label> -->
                                                             <input type="text" id="remarksDSEHF"
@@ -108,7 +107,6 @@
                                                                     <input type="text" id="availability-duration"
                                                                         name="ColdStorageEvaporatorNo1Fan Total running hours/day"
                                                                         placeholder="HH:MM"
-                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                         class="time-input" required>
                                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                                     <input type="text" id="remarksfan1"
@@ -125,7 +123,6 @@
                                                                                 id="availability-duration"
                                                                                 name="ColdStorageEvaporatorNo2Fan Total running hours/day"
                                                                                 placeholder="HH:MM"
-                                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                 class="time-input" required>
                                                                             <!-- <label for="RSD">Remarks:</label> -->
                                                                             <input type="text" id="remarksfan2"
@@ -142,7 +139,6 @@
                                                                                         id="availability-duration"
                                                                                         name="ColdStorageEvaporatorNo3Fan Total running hours/day"
                                                                                         placeholder="HH:MM"
-                                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                         class="time-input" required>
                                                                                     <!-- <label for="RSD">Remarks:</label> -->
                                                                                     <input type="text" id="remarksfan3"
@@ -160,7 +156,6 @@
                                                                                                 id="availability-duration"
                                                                                                 name="ColdstorageCorridorEvaporatorFan Total running hours/day"
                                                                                                 placeholder="HH:MM"
-                                                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                 class="time-input"
                                                                                                 required>
                                                                                             <!-- <label for="RSD">Remarks:</label> -->
@@ -181,7 +176,6 @@
                                                                                                         id="availability-duration"
                                                                                                         name="AirCompressor Total running hours/day"
                                                                                                         placeholder="HH:MM"
-                                                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                         class="time-input"
                                                                                                         required>
                                                                                                     <!-- <label for="RSD">Remarks:</label> -->
@@ -208,7 +202,6 @@
                                                                                                                 id="availability-duration"
                                                                                                                 name="ProductionHallEvaporatorFan Total running hours/day"
                                                                                                                 placeholder="HH:MM"
-                                                                                                                pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                                 class="time-input"
                                                                                                                 required>
                                                                                                             <!-- <label for="RSD">Remarks:</label> -->
@@ -242,7 +235,6 @@
                                                                                                                         id="availability-duration"
                                                                                                                         name="loadingAreaEvaporatorFan Total running hours/day"
                                                                                                                         placeholder="HH:MM"
-                                                                                                                        pattern="^([01]?[0-9]|2[0-3]):[0-5][0-9]$"
                                                                                                                         class="time-input"
                                                                                                                         required>
                                                                                                                     <!-- <label for="RSD">Remarks:</label> -->
@@ -365,38 +357,63 @@
 
 
 
-    <!-- check time validations -->
-    <script>
-        // Get the input element
-        var durationInput = document.getElementById('availability-duration');
-        durationInput.addEventListener('change', function () {
-            durationInput.setCustomValidity('');
-            var value = durationInput.value;
-            var hours = parseInt(value.split(':')[0]);
-            var minutes = parseInt(value.split(':')[1]);
-            if (isNaN(hours) || isNaN(minutes) || minutes >= 60) {
-                durationInput.setCustomValidity('Please enter a valid duration in HH:MM format with hours under 23 and minutes under 60.');
-            }
-        });
-
-        // automatically add colon between HH and MM
-        document.addEventListener('DOMContentLoaded', function () {
-            const timeInputs = document.querySelectorAll('.time-input');
-
-            timeInputs.forEach(function (inputElement) {
-                inputElement.addEventListener('input', function (event) {
-                    const inputValue = event.target.value.trim();
-
-                    // Check if the input value has reached 2 characters (HH)
-                    if (inputValue.length === 2 && !inputValue.includes(':')) {
-                        // Add the colon ':' after the HH part
-                        event.target.value = inputValue + ':';
-                    }
-                });
-            });
-        });
-    </script>
-    <!-- End of check time validations -->
-</body>
+     <!-- check time validations -->
+     <script>
+        // Function to validate the duration input
+        function validateDurationInput(inputElement) {
+               inputElement.addEventListener('change', function () {
+                   inputElement.setCustomValidity('');
+                   var value = inputElement.value;
+                   var timeParts = value.split(':');
+   
+                   // Check if the input is in the format HH:MM or HH
+                   if (timeParts.length === 2) {
+                       var hours = parseInt(timeParts[0]);
+                       var minutes = parseInt(timeParts[1]);
+   
+                       if (isNaN(hours) || isNaN(minutes) || hours > 24 || (hours === 24 && minutes !== 0) || minutes >= 60) {
+                           inputElement.setCustomValidity('Please enter a valid duration in HH:MM format with hours under 24 and minutes under 60.');
+                       }
+                   } else if (timeParts.length === 1) {
+                       var hoursOnly = parseInt(timeParts[0]);
+   
+                       if (isNaN(hoursOnly) || hoursOnly > 24) {
+                           inputElement.setCustomValidity('Please enter a valid duration in HH:MM format with hours under 24.');
+                       }
+                   } else {
+                       inputElement.setCustomValidity('Please enter a valid duration in HH:MM format or hours only.');
+                   }
+               });
+           }
+   
+           // Get the input elements and validate them
+           var durationInputs = document.querySelectorAll('.time-input');
+           durationInputs.forEach(function (input) {
+               validateDurationInput(input);
+           });
+   
+   
+   
+   
+   
+   
+           // auto add colon : between HH and MM
+           document.addEventListener('DOMContentLoaded', function () {
+               const timeInputs = document.querySelectorAll('.time-input');
+   
+               timeInputs.forEach(function (inputElement) {
+                   inputElement.addEventListener('input', function (event) {
+                       const inputValue = event.target.value.trim();
+   
+                       // Check if the input value has reached 2 characters (HH)
+                       if (inputValue.length === 2 && !inputValue.includes(':')) {
+                           // Add the colon ':' after the HH part
+                           event.target.value = inputValue + ':';
+                       }
+                   });
+               });
+           });
+       </script>
+       <!-- End of check time validations -->
 
 </html>
