--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>JM Refrigeration Form</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="./images/favico.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
